# ai-pr-review-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
backend/: __init__.py  main.py
backend/agents/: __init__.py  base_agent.py  contracts.py  docs_agent.py  quality_agent.py  security_agent.py  test_agent.py
backend/api/: __init__.py  economics_router.py  hitl_router.py  queue.py  reviews.py  schemas.py
backend/auth/: __init__.py  dependencies.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  exceptions.py  workflow_engine.py
backend/data/: __init__.py  freshness.py  ingestion.py
backend/database/: __init__.py  models.py  postgres.py  repository.py
backend/economics/: __init__.py  budget.py  cost_repository.py  routing_advisor.py
backend/evaluation/: __init__.py  golden_dataset.py  judge.py  regression_gate.py
backend/hitl/: __init__.py  dispute.py  escalation.py  feedback.py  queue.py
backend/integrations/: __init__.py  github_client.py  github_models.py
backend/job_queue/: __init__.py  arq_worker.py
backend/memory/: __init__.py  context_retriever.py  embedder.py  qdrant_client.py  redis_client.py
backend/models/: __init__.py  enums.py  findings.py  review.py  webhook.py
backend/observability/: __init__.py  alerting.py  audit.py  events.py  logging.py  tracing.py  workflow_context.py
backend/orchestrator/: __init__.py  graph.py  langgraph_engine.py  nodes.py  state.py
backend/prompt/: __init__.py  registry.py
backend/prompt/templates/docs/: v1.txt
backend/prompt/templates/quality/: v1.txt
backend/prompt/templates/security/: v1.txt
backend/reliability/: __init__.py  circuit_breaker.py  idempotency.py  retry.py  timeout.py
backend/security/: __init__.py  injection_guard.py  masking.py  rbac.py  threat_model.py
backend/tools/: __init__.py  capability_scope.py  llm_client.py  model_router.py  sandbox.py  sign.py  tool_registry.py
backend/webhook_receiver/: __init__.py  parser.py  router.py  validator.py
fixtures/: sample_pr_opened.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/costs/: page.tsx
frontend/src/app/economics/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/hitl/: page.tsx
frontend/src/app/queue/: page.tsx
frontend/src/app/reviews/: page.tsx
frontend/src/app/reviews/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AgentFindingCard.tsx  Empty.tsx  HITLDecisionForm.tsx  ReviewProgress.tsx  ReviewStatusBadge.tsx  SeverityChip.tsx  Shell.tsx  VerdictChip.tsx
frontend/src/lib/: api.ts  swr.tsx  types.ts
scripts/: seed_demo_review.py
tests/fixtures/: pr_opened.json
tools/: send_test_webhook.sh  sign.py
